--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EMovieApp"
+        android:name=".core.MyApplication"
         tools:targetApi="31">
         <activity
             android:name=".presentation.MainActivity"
